task15/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend-something
  name: frontend-something
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend-something
