task15/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: frontend-something-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: asilbek-front.nvrbckdown.uz
    http:
      paths:
      - backend:
          service:
            name: frontend-something
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
      - asilbek-front.nvrbckdown.uz
    secretName: k8s-tls  
status:
  loadBalancer: {}
